--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -8,6 +8,11 @@
 <body>
 <div class="container">
   <h1>게시판</h1>
+  <div>
+    <form action="/logout" method="post">
+      <button type="submit">로그아웃</button>
+    </form>
+  </div>
   <table>
     <thead>
     <tr>
