--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 <div class="container">
+    <input type="hidden" th:value="${userId}" id="userId">
+    <input type="hidden" th:value="${board.writer}" id="boardWriter">
     <input type="hidden" id="postCode" th:value="${board.postCode}">
     <h1 th:text="${board.title}">제목</h1>
     <div class="post-details">
@@ -33,8 +35,12 @@
         </ul>
     </div>
     <div class="button-container">
-        <a th:href="@{/board/edit/{postCode}(postCode=${board.postCode})}" class="edit-button">수정</a>
-        <a onclick="deleteBoard()" class="delete-button">삭제</a>
+        <a th:href="@{/board/edit/{postCode}(postCode=${board.postCode})}"
+           class="edit-button"
+           th:if="${userId == board.writer}" >수정</a>
+        <a onclick="deleteBoard()"
+           class="delete-button"
+           th:if="${userId == board.writer}" >삭제</a>
         <a th:href="@{/}" class="back-button">목록으로</a>
     </div>
 </div>
@@ -58,10 +64,12 @@
     }
 
     function insertComment(){
+
         const postCodeValue = document.getElementById("postCode").value;
-        const idValue = 'admin'; // 세션값으로 바꿀 것
+        const idValue = document.getElementById("userId").value;
         const postDetailValue = document.getElementById("comment").value;
         const formData = new FormData();
+        console.log("idValue : " , idValue )
 
         formData.append("commentPostCode", postCodeValue);
         formData.append("commentId", idValue);
