--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -9,45 +9,32 @@
 <body>
 <div class="container">
     <h2>로그인</h2>
-    <form>
+    <form th:action="@{/login}" th:method="POST">
         <div class="input-group">
             <label for="userId">사용자 이름</label>
-            <input type="text" id="userId" name="username" required>
+            <input type="text" id="userId" name="id" required>
         </div>
         <div class="input-group">
             <label for="password">비밀번호</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="pwd" required>
         </div>
-        <button onclick="login()">로그인</button>
+        <button onclick="login(event)" type="submit">로그인</button>
     </form>
+    <div class="signup-link">
+        <p>아직 회원이 아니신가요? <a th:href="@{/signup}">회원가입</a></p>
+    </div>
 </div>
 </body>
 <script>
-    function login(){
+    function login(event) {
         const userId = document.getElementById("userId").value;
         const pwd = document.getElementById("password").value;
 
-        const formData = new FormData();
-
-        formData.append("id" , userId);
-        formData.append("pwd", pwd);
-
-        fetch('/login', {
-            method: 'POST',
-            body : formData
-        }).then(response => {
-            if (response.ok) {
-                window.location.href = "/board/main";
-            } else {
-                return response.text();
-            }
-        }).then(errorMessage => {
-            if (errorMessage) {
-                alert("로그인 실패");
-            }
-        }).catch(error => {
-            console.error('오류가 발생하였습니다 : ', error);
-        });
+        if (userId === "" || pwd === "") {
+            alert("로그인 정보를 입력해주세요.");
+            event.preventDefault();
+            return false;
+        }
     }
 </script>
 </html>
