--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -21,7 +21,7 @@
         <button onclick="login(event)" type="submit">로그인</button>
     </form>
     <div class="signup-link">
-        <p>아직 회원이 아니신가요? <a th:href="@{/signup}">회원가입</a></p>
+        <p><a th:href="@{/signup}">회원가입</a></p>
     </div>
 </div>
 </body>
