--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -6,6 +6,7 @@
   <title>게시판</title>
 </head>
 <body>
+<div th:replace="common/header :: navbar"></div>
 <div class="container">
   <h1>게시판</h1>
   <div>
